prime.log
*** Error compiling 'prime/command_line/change_basis.py'...
  File "prime/command_line/change_basis.py", line 20
    print 'Output file saved to', hklout
                               ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(t 'Output file saved to', hklout)?

*** Error compiling 'prime/command_line/change_path_indexing_ambiguity.py'...
  File "prime/command_line/change_path_indexing_ambiguity.py", line 17
    print txt_help
                 ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(print txt_help)?

*** Error compiling 'prime/command_line/cluster_isoform.py'...
  File "prime/command_line/cluster_isoform.py", line 18
    print txt_out
                ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(t txt_out)?

*** Error compiling 'prime/command_line/compare_solution_pickles.py'...
  File "prime/command_line/compare_solution_pickles.py", line 16
    print key, sol_pickle[key], ind_pickle[key]
            ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(print key, sol_pickle[key], ind_pickle[key])?

*** Error compiling 'prime/command_line/comparestats.py'...
  File "prime/command_line/comparestats.py", line 12
    print 'Use prime.comparestats to compare stats from different log files.'
                                                                            ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(t 'Use prime.comparestats to compare stats from different log files.')?

*** Error compiling 'prime/command_line/explore_twin_operators.py'...
  File "prime/command_line/explore_twin_operators.py", line 19
    print "Warning:", e
                   ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(print "Warning:", e)?

*** Error compiling 'prime/command_line/frame_extractor_by_scan.py'...
  File "prime/command_line/frame_extractor_by_scan.py", line 56
    print scan_no, len(self.reflections)
                ^
SyntaxError: invalid syntax

*** Error compiling 'prime/command_line/iotacc.py'...
  File "prime/command_line/iotacc.py", line 192
    print data, ' - no pickle file found.'
             ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(print data, ' - no pickle file found.')?

*** Error compiling 'prime/command_line/mpi_run.py'...
  File "prime/command_line/mpi_run.py", line 46
    print "Merging with %d batch size"%(n_batch)
                                     ^
SyntaxError: invalid syntax

*** Error compiling 'prime/command_line/mpi_scale.py'...
  File "prime/command_line/mpi_scale.py", line 42
    print "Merging with %d batch size"%(n_batch)
                                     ^
SyntaxError: invalid syntax

*** Error compiling 'prime/command_line/plot_energy_spectrum.py'...
  File "prime/command_line/plot_energy_spectrum.py", line 14
    print 'Usage: prime.plot_energy_spectrum energy_as_comma_separated.file'
                                                                           ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int 'Usage: prime.plot_energy_spectrum energy_as_comma_separated.file')?

*** Error compiling 'prime/command_line/plotstats.py'...
  File "prime/command_line/plotstats.py", line 13
    print 'Use prime.plotstats to view different stats along post-refinement cycles.'
                                                                                    ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(t 'Use prime.plotstats to view different stats along post-refinement cycles.')?

*** Error compiling 'prime/command_line/postrefine.py'...
  File "prime/command_line/postrefine.py", line 103
    print txt_merge_mean_table
                             ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(print txt_merge_mean_table)?

*** Error compiling 'prime/command_line/print_integration_pickle.py'...
  File "prime/command_line/print_integration_pickle.py", line 70
    print "prime.print_integration_pickle: for viewing systematic absences and beam xy position from integration pickles."
                                                                                                                         ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int "prime.print_integration_pickle: for viewing systematic absences and beam xy position from integration pickles.")?

*** Error compiling 'prime/command_line/r_mtz_mtz.py'...
  File "prime/command_line/r_mtz_mtz.py", line 35
    print "Please provide input hkl files."
                                          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int "Please provide input hkl files.")?

*** Error compiling 'prime/command_line/ray_trace.py'...
  File "prime/command_line/ray_trace.py", line 24
    print "prime.ray_trace: read integration pickles and ray trace the reflections"
                                                                                  ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int "prime.ray_trace: read integration pickles and ray trace the reflections")?

*** Error compiling 'prime/command_line/run.py'...
  File "prime/command_line/run.py", line 16
    print "Submitting prime job to ", iparams.queue.qname
                                   ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int "Submitting prime job to ", iparams.queue.qname)?

*** Error compiling 'prime/command_line/solve_indexing_ambiguity.py'...
  File "prime/command_line/solve_indexing_ambiguity.py", line 19
    print txt_out
                ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(t txt_out)?

*** Error compiling 'prime/command_line/view_fineslices.py'...
  File "prime/command_line/view_fineslices.py", line 27
    print "Please input all parameters"
                                      ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int "Please input all parameters")?

*** Error compiling 'prime/command_line/viewstats.py'...
  File "prime/command_line/viewstats.py", line 13
    print 'Use prime.viewstats to view convergence of post-refined parameters.'
                                                                              ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(t 'Use prime.viewstats to view convergence of post-refined parameters.')?

*** Error compiling 'prime/index_ambiguity/mod_indexing_ambiguity.py'...
  File "prime/index_ambiguity/mod_indexing_ambiguity.py", line 57
    print 'Error reading input pickle.'
                                      ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(print 'Error reading input pickle.')?

*** Error compiling 'prime/postrefine/mod_gui_frames.py'...
  File "prime/postrefine/mod_gui_frames.py", line 575
    print 'killing PID {}'.format(i)
                         ^
SyntaxError: invalid syntax

*** Error compiling 'prime/postrefine/mod_input.py'...
  File "prime/postrefine/mod_input.py", line 402
    print txt_help
                 ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(print txt_help)?

*** Error compiling 'prime/postrefine/mod_merge_data.py'...
  File "prime/postrefine/mod_merge_data.py", line 96
    print "Warning: R_split calculation failed."
                                               ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(print "Warning: R_split calculation failed.")?

*** Error compiling 'prime/postrefine/mod_misc.py'...
  File "prime/postrefine/mod_misc.py", line 193
    print "Warning: error importing matplotlib.pyplot"
                                                     ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(print "Warning: error importing matplotlib.pyplot")?

*** Error compiling 'prime/postrefine/mod_outlier.py'...
  File "prime/postrefine/mod_outlier.py", line 47
    print 'Acentric outliers:'
                             ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(print 'Acentric outliers:')?

*** Error compiling 'prime/postrefine/mod_pdb.py'...
  File "prime/postrefine/mod_pdb.py", line 21
    print line
             ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(print line)?

*** Error compiling 'prime/postrefine/mod_perf.py'...
  File "prime/postrefine/mod_perf.py", line 14
    print self.module_name, self.t_st.strftime("%d/%m/%Y %H:%M:%S"), self.t_en.strftime("%d/%m/%Y %H:%M:%S"), self.t_spent.microseconds
             ^
SyntaxError: invalid syntax

*** Error compiling 'prime/postrefine/mod_run.py'...
  File "prime/postrefine/mod_run.py", line 16
    print "Done. You can view your results and log file in ", iparams.run_no
                                                           ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(int "Done. You can view your results and log file in ", iparams.run_no)?

*** Error compiling 'prime/postrefine/mod_util.py'...
  File "prime/postrefine/mod_util.py", line 334
    print "Warning: outlier rejection by bins failed because of floating point."
                                                                               ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(print "Warning: outlier rejection by bins failed because of floating point.")?

*** Error compiling 'prime/postrefine/postrefine.py'...
  File "prime/postrefine/postrefine.py", line 79
    print txt_exception
                      ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(print txt_exception)?

